# helmet-TiDB-Hackathon

./: .env  .env.EXAMPLE  .env.example  .gitignore  CRISIS_TEST_SCENARIOS.md  Dockerfile  MIT-Liscence.txt  Makefile  README.md  WEB_INTERFACE_README.md  agent_server.py  app.py  clear_and_rebuild_vectors.py  client.py  create_fake_notifications.py  docker-compose.yml  exe.txt  execution.py  geocode.json  main.py  pitch.txt  places_last.json  places_total.json  populate_vector_tables.py  pyproject.toml  rebuild_vectors.py  requirements.txt  reverse_geocode.json  run.py  server.py  simple_test.py  start_stack.sh  sync_vectors.py  t.md  test_conflict.py  test_db.py  test_db_agent.py  test_results.json  test_server.py  test_tools.py  (+2 more)
HELMET_BACKEND/: Dockerfile  backend.py  requirements.txt  run_supervisor.py
HELMET_DASHBOARD/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
HELMET_FRONTEND/: Dockerfile  package-lock.json  package.json
HELMET_MCP/: Dockerfile  requirements.txt
HELMET_MCP/mcp/: api_client.py  db_client.py
agents/: __init__.py  math_agent.py  research_agent.py  stock_manager_agent.py  supervisor_manager.py
assets/: execution.txt  firstResultStrategie.json
backend_hackathon/: Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  gqlgen.yml  sqlc.yaml
backend_hackathon/graph/: resolver.go  schema.graphqls
backend_hackathon/src/: main.go
database/: config.py
debug/: palces_filtred.json
execution_for_video/: 001_no_conflict_agent_tool.txt  002_first_conflict_resolved.txt
maps-agent-ui/: README_MAPS.md  package-lock.json  package.json
output/: general_ocr_002_res.json
prompt/: 001_prompt_conflict.txt  001_prompt_planning.txt  002_conflict_agent.txt  002_prompt_planning.txt  003_prompt_conflict.txt
server/: google_maps_mcp.py  server_api.py
src/: config.py  connectors.py  embedding.py  mcp_server.py
test/: main-OCR-Playwright.py  main1.py  main2.py  main22.py  page.txt  page2.txt  page3.txt
tests/: README.md  __init__.py  conftest.py  test_orders.py  test_products.py  test_sites.py  test_suppliers.py
tools/: distance_matrix.py  geocode.py  manager.py  places_nearby.py  reverse_geocode.py
website_hackathon/: package-lock.json  package.json  tsconfig.json
(+150 files in other folders)
